--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -17,7 +17,7 @@
     color: #212121;
     border-radius: 4px;
     border: none;
-    margin: 94px 0 50px 0;
+    margin-bottom:50px;
     cursor: pointer;
 }
 
@@ -89,12 +89,12 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 36px;
-    color: $brand-black;
+    color: $black-color;
 }
 
 .product__description__name {
     justify-content: flex-end;
     font-size: 16px;
     line-height: 30px;
-    color: $brand-gray;
+    color: $primary-text;
 }
