--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './components/button';
 @import './components/container';
 @import './components/container--header';
+@import './components/container--center';
 @import './components/container--column';
 @import './components/container--topsection';
 @import './components/header-secondary';
